--- a/valuetransfer/src/main/res/layout/capture_activity.xml
+++ b/valuetransfer/src/main/res/layout/capture_activity.xml
@@ -4,18 +4,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@android:color/transparent">
+    android:backgroundTint="@android:color/transparent"
+    android:paddingHorizontal="12dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clCameraView"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dialog_title_identity_onboarding_scan"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:gravity="center_horizontal"
+        android:text="@string/text_identity_onboarding_scan_extra"
+        app:layout_constraintBottom_toTopOf="@+id/cvCameraView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvCameraView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="12dp"
+        app:cardCornerRadius="@dimen/cornerRadius"
+        android:elevation="4dp"
         app:layout_constraintDimensionRatio="H,4:3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clCameraView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <nl.tudelft.trustchain.valuetransfer.passport.mlkit.CameraSourcePreview
         android:id="@+id/camera_source_preview"
@@ -41,8 +71,10 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/border_background" />
+        android:background="@drawable/capture_mrz_zone" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tvFeedback"
@@ -54,7 +86,24 @@
         android:textSize="16dp"
         android:textStyle="bold"
         android:gravity="center_horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/clCameraView"
+        app:layout_constraintTop_toBottomOf="@+id/cvCameraView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnScanPrevious"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:backgroundTint="@color/light_gray"
+        android:textColor="@color/black"
+        android:layout_marginBottom="12dp"
+        android:layout_gravity="center"
+        android:background="@drawable/button_rounded"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:textSize="12sp"
+        android:text="@string/btn_go_back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
