--- a/valuetransfer/src/main/res/menu/contact_chat_options_no_contact.xml
+++ b/valuetransfer/src/main/res/menu/contact_chat_options_no_contact.xml
@@ -5,6 +5,14 @@
         android:icon="@drawable/ic_contact"
         android:title="View Contact" />
     <item
+        android:id="@+id/actionContactConnectInvitation"
+        android:icon="@drawable/ic_contact"
+        android:title="Send Connect Invitation" />
+    <item
+        android:id="@+id/actionContactConnectConfirmation"
+        android:icon="@drawable/ic_contact"
+        android:title="Send Connect Confirmation" />
+    <item
         android:id="@+id/actionSearchFilterChat"
         android:icon="@drawable/ic_search_filter"
         android:title="@string/text_search_filter_chat" />
