--- a/valuetransfer/src/main/res/menu/contact_chat_options_no_contact.xml
+++ b/valuetransfer/src/main/res/menu/contact_chat_options_no_contact.xml
@@ -3,15 +3,19 @@
     <item
         android:id="@+id/actionViewContact"
         android:icon="@drawable/ic_contact"
-        android:title="View Contact" />
+        android:title="@string/menu_contact_chat_view_contact" />
     <item
-        android:id="@+id/actionContactConnectInvitation"
-        android:icon="@drawable/ic_contact"
-        android:title="Send Connect Invitation" />
-    <item
-        android:id="@+id/actionContactConnectConfirmation"
-        android:icon="@drawable/ic_contact"
-        android:title="Send Connect Confirmation" />
+        android:id="@+id/actionViewMedia"
+        android:icon="@drawable/ic_media_all"
+        android:title="@string/menu_contact_chat_view_media" />
+<!--    <item-->
+<!--        android:id="@+id/actionContactConnectInvitation"-->
+<!--        android:icon="@drawable/ic_contact"-->
+<!--        android:title="Send Connect Invitation" />-->
+<!--    <item-->
+<!--        android:id="@+id/actionContactConnectConfirmation"-->
+<!--        android:icon="@drawable/ic_contact"-->
+<!--        android:title="Send Connect Confirmation" />-->
     <item
         android:id="@+id/actionSearchFilterChat"
         android:icon="@drawable/ic_search_filter"
