--- a/valuetransfer/src/main/res/menu/contact_chat_attachments.xml
+++ b/valuetransfer/src/main/res/menu/contact_chat_attachments.xml
@@ -10,6 +10,10 @@
         android:icon="@drawable/ic_media"
         android:title="@string/menu_contact_chat_attachment_photo" />
     <item
+        android:id="@+id/actionSendFile"
+        android:icon="@drawable/ic_file"
+        android:title="@string/menu_contact_chat_attachment_file" />
+    <item
         android:id="@+id/actionSendLocation"
         android:icon="@drawable/ic_location"
         android:title="@string/menu_contact_chat_attachment_location" />
