--- a/valuetransfer/src/main/res/values/styles.xml
+++ b/valuetransfer/src/main/res/values/styles.xml
@@ -132,6 +132,11 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="ButtonAccentRounded" parent="ButtonRounded">
+        <item name="backgroundTint">?attr/colorAccent</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     // Date Picker Dialog
     <style name="DatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/colorPrimaryValueTransfer</item>
@@ -157,7 +162,7 @@
     <style name="DialogTitle" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">24dp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textAlignment">center</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textColor">?attr/onDialogColor</item>
